--- a/html/index.html
+++ b/html/index.html
@@ -12,18 +12,39 @@
 	
 	<script src="js/libs/less.js" type="text/javascript"></script>
 	<script src="js/libs/mootools.js" type="text/javascript"></script>
+	<script src="js/libs/onhashchange.js" type="text/javascript"></script>
 	<script src="js/libs/signals.js" type="text/javascript"></script>
 
 	<script src="js/agj/agj.js" type="text/javascript"></script>
 	<script src="js/classes.js" type="text/javascript"></script>
+	<script src="js/lines.js" type="text/javascript"></script>
 	<script src="js/script2.js" type="text/javascript"></script>
 </head>
 
 <body class="single-mode">
 	
 	<header id="title" class="active">
-		<h1>spwords, by <a href="http://www.agj.cl/">agj.</a></h1>
-		<p class="options active"><span class="mode single-mode">single</span><span class="mode double-mode">hotseat</span> mode. (play <span class="option single-option">single</span><span class="option double-option">hotseat</span>)</p>
+		<div class="language language-en">
+			<h1>spwords, by <a href="http://www.agj.cl/">agj.</a></h1>
+			<p class="options active">
+				<span class="mode single-mode">single</span><span class="mode double-mode">hotseat</span>
+					mode.
+				(play
+					<span class="option single-mode-option">single</span><span class="option double-mode-option">hotseat</span>)
+			</p>
+		</div>
+		<div class="language language-es">
+			<h1>spwords, por <a href="http://www.agj.cl/">agj.</a></h1>
+			<p class="options active">
+				modo
+					<span class="mode single-mode">individual</span><span class="mode double-mode">doble</span>.
+				(juega
+					<span class="option single-mode-option">individual</span><span class="option double-mode-option">doble</span>)
+			</p>
+		</div>
+		<div id="language-select" class="active">
+			<span class="option en-language-option">english</span> <span class="option es-language-option">español</span>
+		</div>
 	</header>
 
 
@@ -31,7 +52,8 @@
 		<div class="bar remaining"></div>
 	</div>
 	
-	<div id="game"></div>
+	<div id="game">
+	</div>
 	
 	<div class="two time-bar">
 		<div class="bar remaining"></div>
