--- a/source/copy/index.html
+++ b/source/copy/index.html
@@ -8,6 +8,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Styles and scripts -->
+    <style>
+      @font-face {
+        font-family: "Source Code Pro";
+        font-style: normal;
+        font-weight: 200;
+        font-display: swap;
+        src: url(./fonts/Source_Code_Pro/SourceCodePro-ExtraLight.ttf)
+          format("truetype");
+      }
+      @font-face {
+        font-family: "Source Code Pro";
+        font-style: italic;
+        font-weight: 200;
+        font-display: swap;
+        src: url(./fonts/Source_Code_Pro/SourceCodePro-ExtraLightItalic.ttf)
+          format("truetype");
+      }
+      @font-face {
+        font-family: "Source Code Pro";
+        font-style: normal;
+        font-weight: 600;
+        font-display: swap;
+        src: url(./fonts/Source_Code_Pro/SourceCodePro-SemiBold.ttf)
+          format("truetype");
+      }
+      @font-face {
+        font-family: "Source Code Pro";
+        font-style: italic;
+        font-weight: 600;
+        font-display: swap;
+        src: url(./fonts/Source_Code_Pro/SourceCodePro-SemiBoldItalic.ttf)
+          format("truetype");
+      }
+    </style>
     <script src="js/script.js"></script>
   </head>
   <body>
