Made it so that the entire game is visible when the soft keyboard is displayed on mobile. Still a rough experience with pinch zooming and scrolling, need to research that a bit.

--- a/source/copy/index.html
+++ b/source/copy/index.html
@@ -56,6 +56,15 @@
           },
         },
       });
+
+      if (visualViewport) {
+        visualViewport.addEventListener("resize", (e) => {
+          app.ports.visualViewport.send({
+            width: visualViewport.width,
+            height: visualViewport.height,
+          });
+        });
+      }
     </script>
   </body>
 </html>
