Added basic Open Graph tags to the HTML.

--- a/source/copy/index.html
+++ b/source/copy/index.html
@@ -7,6 +7,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="Spwords" />
+    <meta
+      property="og:description"
+      content="Bring your spwords drink and stretch those fingers for this intense keyboard duel!"
+    />
+    <meta property="og:type" content="game" />
+    <meta property="og:locale" content="en" />
+
     <!-- Styles and scripts -->
     <style>
       @font-face {
