Put output JS filename in config

--- a/source/copy/index.html
+++ b/source/copy/index.html
@@ -51,7 +51,7 @@
           format("truetype");
       }
     </style>
-    <script src="js/script.js"></script>
+    <script src="js/elm.js"></script>
   </head>
   <body>
     <div id="elm"></div>
