--- a/source/copy/index.html
+++ b/source/copy/index.html
@@ -51,42 +51,10 @@
           format("truetype");
       }
     </style>
-    <script src="js/elm.js"></script>
   </head>
   <body>
     <div id="elm"></div>
-    <script>
-      var app = Elm.Main.init({
-        node: document.getElementById("elm"),
-        flags: {
-          viewport: {
-            width: window.innerWidth,
-            height: window.innerHeight,
-          },
-        },
-      });
-
-      if (visualViewport) {
-        visualViewport.addEventListener("resize", (e) => {
-          window.scrollTo(0, 0);
-          app.ports.visualViewport.send({
-            width: visualViewport.width,
-            height: visualViewport.height,
-          });
-        });
-
-        document.addEventListener("scroll", (e) => {
-          window.scrollTo(0, 0);
-        });
-
-        document.body.addEventListener(
-          "touchmove",
-          (e) => {
-            e.preventDefault();
-          },
-          { passive: false }
-        );
-      }
-    </script>
+    <script src="js/elm.js"></script>
+    <script src="js/init.js"></script>
   </body>
 </html>
