--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
         font-style: normal;
         font-weight: 200;
         font-display: swap;
-        src: url(./fonts/Source_Code_Pro/SourceCodePro-ExtraLight.ttf)
+        src: url(./public/fonts/Source_Code_Pro/SourceCodePro-ExtraLight.ttf)
           format("truetype");
       }
       @font-face {
@@ -31,7 +31,7 @@
         font-style: italic;
         font-weight: 200;
         font-display: swap;
-        src: url(./fonts/Source_Code_Pro/SourceCodePro-ExtraLightItalic.ttf)
+        src: url(./public/fonts/Source_Code_Pro/SourceCodePro-ExtraLightItalic.ttf)
           format("truetype");
       }
       @font-face {
@@ -39,7 +39,7 @@
         font-style: normal;
         font-weight: 600;
         font-display: swap;
-        src: url(./fonts/Source_Code_Pro/SourceCodePro-SemiBold.ttf)
+        src: url(./public/fonts/Source_Code_Pro/SourceCodePro-SemiBold.ttf)
           format("truetype");
       }
       @font-face {
@@ -47,14 +47,13 @@
         font-style: italic;
         font-weight: 600;
         font-display: swap;
-        src: url(./fonts/Source_Code_Pro/SourceCodePro-SemiBoldItalic.ttf)
+        src: url(./public/fonts/Source_Code_Pro/SourceCodePro-SemiBoldItalic.ttf)
           format("truetype");
       }
     </style>
   </head>
   <body>
     <div id="elm"></div>
-    <script src="js/elm.js"></script>
-    <script src="js/init.js"></script>
+    <script type="module" src="./ts/main.js"></script>
   </body>
 </html>
